@@ -1,6 +1,7 @@
 btsync-gui (0.8.3-1) unstable; urgency=low
 
   * Made columns in "Folders" and "Devices" pane persistently sortable
+  * Hide unimplemented panes "Transfers" and "History"
 
  -- Leo Moll <leo.moll@yeasoft.com>  Sun, 06 Apr 2014 18:28:06 +0200
 
